# Majestik_World

./: .gitattributes  .yamllint  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SPECS.md  UE5_PLUGIN_MASTER_PLAN.md  plan.md  rust-toolchain.toml
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: path.rs
common/tests/: uniform_range_inclusive.rs
docs/: CI_FEATURES.md  features.md  ue5_plugin_migration_plan.md
plugin/examples/anim/: Cargo.toml
plugin/examples/hello/: Cargo.toml
rust/: README.md
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/unreal-bindings/: Cargo.toml  build.rs
rust/unreal-bindings/include/: .gitignore
rust/unreal-bindings/src/: lib.rs
world/: Cargo.toml
world/src/civ/: airship_route_map.rs
world/tests/: airship_route_map_png_error.rs
