[package]
name = "majestic-world-core"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
veloren-common = { path = "../../common", package = "veloren-common" }
veloren-common-state = { path = "../../common/state", package = "veloren-common-state" }
specs = { workspace = true }
vek = { workspace = true }

[dev-dependencies]
approx = "0.5"
